[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Default.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Properties/Property.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Properties/NumberProperty.gd" type="Script" id=3]

[node name="NumberProperty" instance=ExtResource( 2 )]
theme = ExtResource( 1 )
script = ExtResource( 3 )
text = "Text"

[node name="SpinBox" type="SpinBox" parent="." index="1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -12.5
margin_right = 1.0
margin_bottom = 13.5
step = 0.001
allow_greater = true
allow_lesser = true

[connection signal="value_changed" from="SpinBox" to="." method="_spin_box_value_changed"]
